fixed button spacing so they don't get cut off in the gallery's grid mode

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,14 +32,6 @@ button{
 	border-bottom: 4px solid;
 }
 
-#left{
-	margin-left: 60%;
-}
-
-#right{
-	margin-right: 60%;
-}
-
 #gallery{
 	height: 100vh;/*660px;*/
 	overflow: auto;
